# xreal-parallax

./: .gitignore  Cargo.toml  README.md
assets/shaders/: panel.wgsl
config/: default.toml
crates/xreal-capture/: Cargo.toml
crates/xreal-capture/src/: duplication.rs  lib.rs
crates/xreal-config/: Cargo.toml
crates/xreal-config/src/: lib.rs  types.rs
crates/xreal-imu/: Cargo.toml
crates/xreal-imu/src/: fusion.rs  lib.rs  protocol.rs  types.rs  usb_ecm.rs
crates/xreal-input/: Cargo.toml
crates/xreal-input/src/: lib.rs  mouse.rs
crates/xreal-renderer/: Cargo.toml
crates/xreal-renderer/src/: camera.rs  lib.rs  panel.rs  pipeline.rs  scene.rs  stereo.rs
crates/xreal-vdisplay/: Cargo.toml
crates/xreal-vdisplay/src/: lib.rs  manager.rs
src/: main.rs
