[workspace]
resolver = "2"
members = [
    "crates/xreal-imu",
    "crates/xreal-capture",
    "crates/xreal-vdisplay",
    "crates/xreal-renderer",
    "crates/xreal-input",
    "crates/xreal-config",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
wgpu = "23"
winit = "0.30"
glam = { version = "0.29", features = ["serde"] }
ahrs = "0.8"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
byteorder = "1"
nalgebra = "0.34"

[package]
name = "xreal-app"
version = "0.1.0"
edition = "2021"

[dependencies]
xreal-imu = { path = "crates/xreal-imu" }
xreal-capture = { path = "crates/xreal-capture" }
xreal-vdisplay = { path = "crates/xreal-vdisplay" }
xreal-renderer = { path = "crates/xreal-renderer" }
xreal-input = { path = "crates/xreal-input" }
xreal-config = { path = "crates/xreal-config" }
tokio = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
